--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyBGdDEkqsr2IqradUX5okoi2KfjkXWmpRU
-VITE_FIREBASE_AUTH_DOMAIN=budget-tracker-14152.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=budget-tracker-14152
-VITE_FIREBASE_STORAGE_BUCKET=budget-tracker-14152.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=427878558923
-VITE_FIREBASE_APP_ID=1:427878558923:web:bb3045db5c0fd4b6a5ff4e
-VITE_FIREBASE_MEASUREMENT_ID=G-C8DWYBEG5X
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_MEASUREMENT_ID=
